runoob.com/CSS教程

--- a/06-CSS背景/demo04.html
+++ b/06-CSS背景/demo04.html
@@ -5,8 +5,7 @@
     <title>CSS 背景</title>
     <style>
         body {
-            background-image: url("../images/paper.gif");
-            background-color: #cccccc;
+            background-image: url("../images/bgdesert.jpg");
         }
     </style>
 </head>
@@ -25,7 +24,7 @@
                 background-image属性描述了元素的背景图片
                 默认情况下，背景图片进行了平铺重复显示，以覆盖这个元素实体
 
-                页面背景图片设置实例
+                下面是一个例子是一个糟糕的文字和背景图像组合。文本可读性差
     -->
     <h1>Hello World!</h1>
 </body>
