--- a/06-CSS背景/demo03.html
+++ b/06-CSS背景/demo03.html
@@ -21,7 +21,7 @@
                 background-attachment
                 background-position
 
-            2、背景图片
+            2、背景图像
                 background-image属性描述了元素的背景图片
                 默认情况下，背景图片进行了平铺重复显示，以覆盖这个元素实体
 
