--- a/06-CSS背景/demo06.html
+++ b/06-CSS背景/demo06.html
@@ -5,7 +5,8 @@
     <title>CSS 背景</title>
     <style>
         body {
-            background-image: url("../images/bgdesert.jpg");
+            background-image: url("../images/gradient2.png");
+            background-repeat: repeat-x;
         }
     </style>
 </head>
@@ -20,11 +21,14 @@
                 background-attachment
                 background-position
 
-            2、背景图像
+            2、背景图片
                 background-image属性描述了元素的背景图片
                 默认情况下，背景图片进行了平铺重复显示，以覆盖这个元素实体
 
-                下面是一个例子是一个糟糕的文字和背景图像组合。文本可读性差
+                背景图像 - 水平或垂直平铺
+                    默认情况下background-image属性会在页面的水平或者垂直方向平铺。
+                    一些图像如果在水平方向与垂直方向平铺，这样看起来很不协调
+                    如果图像只在水平方向平铺 (repeat-x), 页面背景会更好些
     -->
     <h1>Hello World!</h1>
 </body>
