runoob.com/CSS教程

--- a/06-CSS背景/demo14.html
+++ b/06-CSS背景/demo14.html
@@ -33,8 +33,8 @@
                 1）浏览器支持
                     表格中的数字表示支持该属性的第一个浏览器版本号。
                     紧跟在-webkit-, -ms-或-moz-前的数字为支持该前缀属性的第一个浏览器版本号。
-                    属性              chrome      IE      firefox     Safari      Opera
-                    background          1.0      4.0        1.0         1.0        3.5
+                    属性                    chrome      IE      firefox     Safari      Opera
+                    background-color          1.0      4.0        1.0         1.0        3.5
                     所有主流浏览器都支持background-color属性。
                     注意：IE7和更早的版本不支持"继承"的值。IE8需要定义！DOCTYPE。IE9支持"继承"。
                 2）标签定义及使用说明
