--- a/06-CSS背景/demo13.html
+++ b/06-CSS背景/demo13.html
@@ -27,8 +27,8 @@
                 1）浏览器支持
                     表格中的数字表示支持该属性的第一个浏览器版本号。
                     紧跟在-webkit-, -ms-或-moz-前的数字为支持该前缀属性的第一个浏览器版本号。
-                    属性              chrome      IE      firefox     Safari      Opera
-                    background          1.0      4.0        1.0         1.0        3.5
+                    属性                          chrome      IE      firefox     Safari      Opera
+                    background-attachment          1.0      4.0        1.0         1.0        3.5
                     所有主流浏览器都支持background-attachment属性。
                     注意：Internet Explorer 8及其更早版本的浏览器不支持多个背景图像在一个元素。
                 2）标签定义及使用说明
