--- a/06-CSS背景/demo22.html
+++ b/06-CSS背景/demo22.html
@@ -26,8 +26,8 @@
                 1）浏览器支持
                     表格中的数字表示支持该属性的第一个浏览器版本号。
                     紧跟在-webkit-, -ms-或-moz-前的数字为支持该前缀属性的第一个浏览器版本号。
-                    属性              chrome      IE      firefox     Safari      Opera
-                    background          1.0      4.0        1.0         1.0        3.5
+                    属性                      chrome      IE      firefox     Safari      Opera
+                    background-repeat          1.0      4.0        1.0         1.0        3.5
                     注意：
                         IE8及其更早版本不支持一个元素上设置多个背景图片。
                         IE7和更早的版本不支持"inherit（继承）"的值。IE8需要定义！DOCTYPE。IE9支持"inherit（继承）"。
